Fixing logo's light and dark mode

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -160,9 +160,9 @@ body {
     width: 100%;
     height: 2px;
     position: absolute;
-    background-color: black;
+    background-color: var(--primary-black);
     left: 0;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 /* Styling for the top, middle, and bottom lines of the hamburger menu icon */
@@ -566,8 +566,19 @@ body.dark-mode .button {
     color: #000;
 }
 
-body.dark-mode .navbar-brand img {
-    /* You might need an alternative logo for dark mode */
+body.dark-mode .cs-line {
+    background-color: var(--primary-white);
+}
+
+#navbar-logo-dark {
+    display: none;
+}
+
+body.dark-mode #navbar-logo-light {
+    display: none;
+}
+body.dark-mode #navbar-logo-dark {
+    display: block;
 }
 
 /* Add more styles as needed */
